# waste-wise

./: .gitignore  README.md  package-lock.json
backend/: main.py  pyproject.toml  requirements.txt  server.py
backend/.arch/: server-flask.py
backend/backend-env/: pyvenv.cfg
backend/backend-env/Scripts/: activate  activate.bat
backend/core/: config.py
backend/routers/: auth.py  chat.py  generate_disposal.py  generate_recycle.py  img_processing.py  youtube_search.py
backend/schemas/: __init__.py  requests.py  responses.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: CameraAndGallery.jsx  Card.jsx  CardsInfinite.jsx  InfiniteLandingPage.jsx  LandCard.jsx  MainInput.jsx  SignIn.jsx  SignUp.jsx  SubmitButton.jsx
frontend/src/pages/: Banner.jsx  CameraPage.jsx  CapturedImage.jsx  Disposal.jsx  Landing.jsx  Recycle.jsx
